# mobile-manipulator

./: .gitignore  README.md  requirements.txt
MUJOCO/Quadruped/: README.md  requirements.txt
MUJOCO/Quadruped/gui/: MUJOCO_LOG.TXT
MUJOCO/Quadruped/src/env/: env_assets.xml  kitchen_world.xml  kitchen_world_V2.xml  market_world.xml  market_world_one_arm.xml  market_world_plain.xml
MUJOCO/Quadruped/src/env/furniture_sim/: boxcabinet.xml  counters.xml  dishwasher.xml  hingecabinet.xml  kettle.xml  lightButtons.xml  microwave.xml  oven.xml  simpleTable.xml  slidecabinet.xml  test_sims.py  ventionTable.xml
MUJOCO/Quadruped/src/env/minimarket/: market_assets.xml
MUJOCO/Quadruped/src/env/robot/: obotx _mjx.xml  obotx.xml  obotx_V2.xml  obotx_V2_OBJs.xml  obotx_V3.xml
MUJOCO/Quadruped/src/gui/: MUJOCO_LOG.TXT  imgui.ini  play.py
MUJOCO/Quadruped/src/modules/: pubsub.py  trajectory_opt.py
MUJOCO/Quadruped/src/simulations/: morph_i_free_move.py  morph_i_market_trajectory.py  morph_ii_free_move.py  morph_ii_kitchen_trajectory.py  pubsub.py
MUJOCO/Tripod/: README.md  pyproject.toml
MUJOCO/Tripod/models/: obotx.xml  scene.xml
MUJOCO/Tripod/models/exported/: Bolt.002_metal.001.msh  Circle.006_metal.Black.001.msh  Circle.111_metal.Black.001.msh  Circle.112_metal.Black.001.msh  Circle.113_Kontakt.001.msh  Circle.113_weiss.001.msh  Circle.114_metal.001.msh  Circle.115_metal.001.msh  Circle.116_metal.Black.001.msh  Circle.117_metal.Black.001.msh  Circle.118_metalAxis.001.msh  Circle.119_metalAxis.001.msh  Circle.120_metalAxis.001.msh  Circle.121_metalAxis.001.msh  Circle.122_metalAxis.001.msh  Circle.123_metalAxis.001.msh  Circle.124_metalAxis.001.msh  Circle.125_metal.Black.001.msh  Circle.126_metal.Black.001.msh  Circle.127_metal.Black.001.msh  Circle.128_metalAxis.001.msh  Circle.129_metal.Black.001.msh  Circle.130_metal.Black.001.msh  Circle.131_metal.Black.001.msh  Circle.132_metalAxis.001.msh  Circle.133_metalAxis.001.msh  Circle.134_metalAxis.001.msh  Circle.135_metalAxis.001.msh  Circle.136_metalAxis.001.msh  Circle.137_metalAxis.001.msh  Circle.138_metal.Black.001.msh  Circle.139_metal.Black.001.msh  Circle.140_metal.Black.001.msh  Circle.141_metalAxis.001.msh  Circle.142_metal.Black.001.msh  Circle.143_metal.Black.001.msh  Circle.144_metal.Black.001.msh  Circle.145_metal.Black.001.msh  Circle.146_metal.Black.001.msh  Circle.147_metalAxis.001.msh  (+107 more)
MUJOCO/Tripod/src/obotx_sim/: main.py  sim.py
MUJOCO/Tripod/src/obotx_sim/utils/: transformations.py
MuJoCo Google DeepMind - open source mobile manipulator/: arm_obotx_with_mobile_base.xml  mobile_robot_config.json  mujoco_robot_control.py  requirements.txt  run_env.py  site_example.xml  unified_robot_config.json
MuJoCo Google DeepMind - open source mobile manipulator/assets/: arm_obotx_actuator.xml  assets.xml
MuJoCo Google DeepMind - open source mobile manipulator/result/: summit_xls_with_arm_obotx_base_footprint.urdf  summit_xls_with_arm_obotx_target_arm.urdf  summit_xls_with_arm_obotx_target_base.urdf
MuJoCo Google DeepMind - open source mobile manipulator/robot_control/: config.py  diagnostics.py  gripper.py  interface.py  main.py  mobile_base.py  trajectory.py
MuJoCo Google DeepMind - open source mobile manipulator/urdf/: converted_Arm_Left.stl  converted_Arm_Right.stl  converted_Bearing_Column_Left.stl  converted_Bearing_Column_Right.stl  converted_Column_Left.stl  converted_Column_Right.stl  converted_Column_Rotation.stl  converted_Contact_Cylinder.stl  converted_Hand_Bearing.stl  converted_Left_Rotation.stl  converted_Right_Rotation.stl  converted_link_0.stl  converted_link_1.stl  converted_link_2.stl  converted_link_3.stl  converted_palm.stl  converted_summit_xls_chapas_inox_tapas.stl  converted_summit_xls_chassis.stl  converted_summit_xls_omni_wheel_1.stl  converted_summit_xls_omni_wheel_2.stl  mjmodel.urdf
ROS/Quadruped/: README.md
ROS/Quadruped/src/delto_m_ros2/: .gitignore  LICENSE
ROS/Quadruped/src/delto_m_ros2/dg4f_gz/: CMakeLists.txt  README.md  package.xml
ROS/Quadruped/src/delto_m_ros2/dg_description/: README.md  package.xml  setup.cfg  setup.py
ROS/Quadruped/src/mecanum_drive_controller/: CMakeLists.txt  mecanum_drive_plugin.xml  package.xml
ROS/Quadruped/src/mm_bringup/: CMakeLists.txt  package.xml
ROS/Quadruped/src/mm_bringup/launch/: gazebo_sim.launch.py  morph_i.launch.py  obotx_arm.launch.py  obotx_dual_arm.launch.py
ROS/Quadruped/src/mm_bringup/mm_bringup/: nl_mimic_parser.py
ROS/Quadruped/src/mm_bringup/scripts/: morph_i_gz_moveit.sh  morph_i_pick_place.sh
ROS/Quadruped/src/mm_control/: CMakeLists.txt  package.xml
ROS/Quadruped/src/mm_description/: CMakeLists.txt  model.config  package.xml
ROS/Quadruped/src/mm_gazebo/: CMakeLists.txt  package.xml
ROS/Quadruped/src/mm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ROS/Quadruped/src/mm_moveit_config/config/: ompl_planning.yaml
ROS/Quadruped/src/mm_moveit_config/config/morph_i/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  morph_i.ros2_control.xacro  morph_i.srdf  morph_i.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
ROS/Quadruped/src/mm_moveit_config/launch/: load_ros2_controller.launch.py  move_group.launch.py
ROS/Quadruped/src/mm_moveit_config/scripts/: base_cmd_vel_bridge.py  repub_odometry_mdof_joint_states.py
ROS/Quadruped/src/mm_moveit_demos/: CMakeLists.txt  package.xml
ROS/Quadruped/src/mm_moveit_demos/include/mm_moveit_demos/: pick_place_task.hpp
ROS/Quadruped/src/mm_moveit_demos/launch/: pick_place_demo.launch.py
ROS/Quadruped/src/mm_moveit_demos/rviz/: moveit.rviz
ROS/Quadruped/src/mm_moveit_demos/src/: pick_place_demo.cpp  pick_place_task.cpp  simple_pose_target.cpp
ROS/Tripod/: README.md
src/env/: market_world_plain.xml
src/env/chair_bar/: chair_bar.mtl
src/env/couch/: couch.mtl
src/gui/: play.py
src/modules/: pubsub.py
src/modules/controllers/: morph_i.py  morph_ii.py  whole_body.py
src/modules/utils/: data_manipulation.py
src/simulations/: morph_i_free_move.py  morph_i_market_trajectory.py  pubsub.py
(+273 files in other folders)
